Fix: Restringir despliegue a GitHub Pages solo a eventos push

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -135,6 +135,7 @@ jobs:
   deploy-report:
     name: 🚀 Deploy to GitHub Pages
     needs: merge-reports
+    if: github.event_name == 'push'
     runs-on: ubuntu-latest
     environment:
       name: github-pages
