Fix: Permitir despliegue a Pages también en ejecución manual

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -135,7 +135,7 @@ jobs:
   deploy-report:
     name: 🚀 Deploy to GitHub Pages
     needs: merge-reports
-    if: github.event_name == 'push'
+    if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
     runs-on: ubuntu-latest
     environment:
       name: github-pages
